--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.js"></script>
     <script src="https://unpkg.com/graphology/dist/graphology.umd.js"></script>
-    <script src="https://unpkg.com/graphology-metrics@2.1.0/centrality/betweenness.js"></script>
+    <script src="https://unpkg.com/graphology-metrics@2.1.0/dist/graphology-metrics.umd.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     
     <script>
